Fix Shipping on Iphone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1551,6 +1551,8 @@ html.dark {
 }
 
 .header {
+  position: relative;
+  z-index: 1000;
   background: var(--header-bg-color);
 }
 @media (max-width: 991.98px) {
@@ -2749,14 +2751,14 @@ html.dark {
   font-size: 1.8rem;
   font-weight: 600;
   text-align: center;
-  padding: 14px;
+  padding: 20px;
 }
 .form__close-dialog {
   position: absolute;
   right: 0;
   top: 0;
   font-size: 3rem;
-  padding: 2px 10px;
+  padding: 12px 10px;
   opacity: 0.8;
 }
 .form__search {
@@ -2782,6 +2784,11 @@ html.dark {
   margin-left: 10px;
   width: 16px;
 }
+@media (max-width: 991.98px) {
+  .form__search-icon {
+    width: 20px;
+  }
+}
 @media (max-width: 575.98px) {
   .form__search-icon {
     margin-left: 0;
@@ -2789,12 +2796,12 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__search {
-    height: 42px;
+    height: 48px;
   }
 }
 @media (max-width: 575.98px) {
   .form__search {
-    padding: 0 15px;
+    padding: 0 30px;
     flex-direction: row-reverse;
     border: 1.5px solid #d2d1d6;
     margin: 10px;
@@ -2815,13 +2822,19 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__option {
-    padding: 14px 20px;
+    padding: 18px 30px;
+    font-size: 1.6rem;
   }
 }
 .form__option-list {
   flex: 1;
   overflow-y: auto;
   overscroll-behavior: contain;
+}
+@supports (-webkit-touch-callout: none) {
+  .form__option-list {
+    padding-bottom: 300px;
+  }
 }
 .form__error {
   display: none;
@@ -3018,6 +3031,11 @@ html.dark {
 .search-bar__input ::placeholder {
   color: #9e9da8;
   font-weight: 400;
+}
+@media (max-width: 767.98px) {
+  .search-bar__input {
+    font-size: 1.6rem;
+  }
 }
 .search-bar__submit {
   padding: 13px 15px;
