--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -171,7 +171,7 @@ $error-color: #ed4337;
         font-size: 1.8rem;
         font-weight: 600;
         text-align: center;
-        padding: 14px;
+        padding: 20px;
     }
     &__close-dialog {
         position: absolute;
@@ -180,7 +180,7 @@ $error-color: #ed4337;
 
         font-size: 3rem;
 
-        padding: 2px 10px;
+        padding: 12px 10px;
         opacity: 0.8;
     }
     &__search {
@@ -206,17 +206,21 @@ $error-color: #ed4337;
         &-icon {
             margin-left: 10px;
             width: 16px;
+            @include abstract.breakpoint(lg) {
+                width: 20px;
+            }
+
             @include abstract.breakpoint(sm) {
                 margin-left: 0;
             }
         }
 
         @include abstract.breakpoint(lg) {
-            height: 42px;
+            height: 48px;
         }
 
         @include abstract.breakpoint(sm) {
-            padding: 0 15px;
+            padding: 0 30px;
             flex-direction: row-reverse;
             border: 1.5px solid #d2d1d6;
             margin: 10px;
@@ -237,13 +241,17 @@ $error-color: #ed4337;
             background-color: rgba($color: #ffb700, $alpha: 0.5);
         }
         @include abstract.breakpoint(lg) {
-            padding: 14px 20px;
+            padding: 18px 30px;
+            font-size: 1.6rem;
         }
     }
     &__option-list {
         flex: 1;
         overflow-y: auto;
         overscroll-behavior: contain;
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 300px;
+        }
     }
     &__error {
         display: none;
